tests/new_merge_fixes/new_merge_fixes.exp
Error ----------------------------------------------------------------------------------------------------- main.js:4:16

Cannot assign object literal to `o1` because property `f` is missing in object literal [1] but exists in object
literal [2]. [prop-missing]

   main.js:4:16
   4| const o1: T1 = {}; // error
                     ^^ [1]

References:
   main.js:4:11
   4| const o1: T1 = {}; // error
                ^^ [2]



Found 1 error
